deployments/deploy-yaml/adam-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  adam-k8s-service
  labels:
    app: adam-k8s-app
    group: backend
spec:
  selector:
    app:  adam-k8s-app
  type:  ClusterIP
  ports:
  - name:  http
    port:  80         # port exposed outside ClusterIP
    targetPort:  8080 # port exposed by Pod
