deployments/deploy-yaml/adam-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    
spec:
  rules:
  - host: adam-k8s.k8s-staging.devguru.co
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: adam-k8s-app
            port: 
              name: http
